# anchor-ci-coverage

./: .gitignore  Anchor.toml  example.json  lcov.info  logs.txt  package.json  run-setup.sh  run-test-ci.sh  run-test.sh
.github/workflows/: build.yml
programs/example/: Cargo.toml
programs/example/src/: lib.rs
programs/example/tests/: initialize.rs
programs/leveller/: Cargo.toml
programs/leveller/src/: lib.rs
programs/leveller/src/tests/: initialize.rs
tests/: example.ts  leveller.ts
tests/fixtures/: id.json
